--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -151,12 +151,47 @@
     font-weight: bold;
     animation: brilho 2s infinite alternate; 
     }
+
+  .solucao h1 {
+    transform: translateY(35px);
+  }
+
+  .retangulos {
+    position: relative;
+    width: 100%;
+    height: 600px;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  .retangulo {
+    position: absolute;
+    background: linear-gradient(#5E9849, #5E9849);
+    border-radius: 10px;
+    width: 440px;
+    height: 200px;
+  }
+  
+  .retangulo1 {
+    top: 90px;
+    left: 340px;
+  }
+  
+  .retangulo2 {
+    top: 330px;
+    left: 140px;
+  }
+  
+  .retangulo3 {
+    top: 570px;
+    left: 290px;
+  }  
   
   .funcionalidades {
     font-size: 30px;
     text-align: center;
     padding: 100px;
-    background-color: rgb(245, 244, 210);
+    background-color: rgb(176, 191, 61);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -171,7 +206,7 @@
     align-items: center;
   }
   
-  .info-grid {
+  .grade {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 26px;
