--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -152,6 +152,21 @@
     animation: brilho 2s infinite alternate; 
     }
 
+  .solucao {
+      font-size: 30px;
+      width: 100%;
+      height: 920px; /* Definindo a altura do elemento */
+      padding: 20px;
+      text-align: center;
+      background-color: rgb(245, 244, 210);
+      background-image: 
+          radial-gradient(circle, #f1ab28 10%, transparent 10%), /* Bolinha */
+          radial-gradient(circle, #f1ab28 10%, transparent 10%);
+      background-size: 2400px 2400px, 1100px 1100px; /* Ajusta o tamanho do retângulo e bolinhas */
+      background-repeat: no-repeat; 
+      background-position: right -1200px top -1100px, left -550px top -500px; /* Ajusta as posições */
+  }
+
   .solucao h1 {
     transform: translateY(35px);
   }
