--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -152,10 +152,10 @@
     animation: brilho 2s infinite alternate; 
     }
 
+  /* Container */
   .solucao {
-      font-size: 30px;
       width: 100%;
-      height: 920px; /* Definindo a altura do elemento */
+      height: 775px; /* Definindo a altura do elemento */
       padding: 20px;
       text-align: center;
       background-color: rgb(245, 244, 210);
@@ -165,9 +165,13 @@
       background-size: 2400px 2400px, 1100px 1100px; /* Ajusta o tamanho do retângulo e bolinhas */
       background-repeat: no-repeat; 
       background-position: right -1200px top -1100px, left -550px top -500px; /* Ajusta as posições */
+      position: relative;
   }
 
   .solucao h1 {
+    font-size: 36px;
+    font-weight: 800;
+    color: #696f00;
     transform: translateY(35px);
   }
 
@@ -183,8 +187,9 @@
     position: absolute;
     background: linear-gradient(#5E9849, #5E9849);
     border-radius: 10px;
-    width: 440px;
-    height: 200px;
+    width: 350px;
+    height: 150px;
+    z-index: 1;
   }
   
   .retangulo1 {
@@ -202,11 +207,74 @@
     left: 290px;
   }  
 
-  .analises {
-      background-image: url('./src/agricultores.jpeg');
-      background-size: cover
+  .solucao img {
+    position: relative;
+    width: 750px;
+    height: 700px;
+    margin-right: -600px;
+    margin-top: 40px;
+    z-index: 2;
   }
 
+  /* Container */
+  .analises {
+    position: relative;
+    padding: 100px;
+    height: 820px;
+    width: 100%; 
+    overflow: hidden; /* Garante que a imagem não ultrapasse os limites */
+  }
+  
+  .analises .imagemSolucao {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%; 
+    height: 100%;
+    object-fit: cover; 
+  }  
+
+  .analises .circulos {
+    position: absolute; 
+    top: 50%;
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    z-index: 1;
+  }
+  
+  .circulo1, .circulo2, .circulo3 {
+    position: absolute; 
+    width: 120px; 
+    height: 120px; 
+    border-radius: 50%; 
+  }
+
+  .circulo1 {
+    background-color: #efef91;
+    top: -190px;
+    left: -600px;
+  }
+
+  .circulo2 {
+    background-color: #f7b71d;
+    top: -50px;
+    left: -600px;
+  }
+
+  .circulo3 {
+    background-color: #22998b;
+    top: 90px;
+    left: -600px;
+  }
+
+  .analises h2 {
+    text-align: center;
+    color: #e6ec66;
+    font-size: 40px;
+    font-weight: 800;
+  }
+
+  /* Container */
   .funcionalidades {
     font-size: 30px;
     text-align: center;
@@ -287,7 +355,7 @@
     margin-top: 10px;
   }
 
-
+  /* Container */
   .modeloNegocios {
     padding: 200px;
     text-align: center;
