--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -12,7 +12,7 @@
     z-index: 3;
   }
 
-  div .imagem-pricipal {
+  div .imagem-principal {
     width: 100%; 
     height: 100%; 
     border-radius: 0%; 
