--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -610,20 +610,20 @@
   }
 
 /* responsividade */
-@media (max-width: 480px) {
+@media (max-width: 768px) {
   header {
-    height: 70px; 
+    height: 90px; 
   }
 
   nav {
-    font-size: 16px; 
-    margin-inline: 20px; 
-    flex-direction: column;
-    padding: 10px; 
+    font-size: 18px;
+    margin-inline: 30px;
+    flex-direction: row;
+    padding: 20px;
   }
 
   .logo img {
-    width: 60px;
+    width: 80px;
   }
 
   .div-links {
@@ -631,72 +631,32 @@
   }
 
   .itens-links {
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: center;
   }
 
   .itens-links li {
-    padding-left: 10px; 
+    padding-left: 20px;
   }
 
   .btn-assistir {
-    width: 120px; 
-    height: 30px; 
+    width: 150px;
+    height: 40px;
   }
 
   .banner {
     width: 100%;
-    height: 400px; 
+    height: 500px;
   }
 
   .imagem-principal {
-    width: 80%; 
-    height: auto; 
+    width: 70%;
+    height: auto;
   }
 
   .titulo-banner {
-    font-size: 2rem; 
-    margin-top: 30px; 
-  }
-
-  .solucao h2 {
-    font-size: 30px; 
-  }
-
-  .retangulos {
-    flex-direction: column; 
-  }
-
-  .retangulo {
-    width: 100%; 
-    height: 120px;
-    margin-top: 10px; 
-  }
-
-  .solucao img {
-    width: 100%; 
-    height: auto; 
-    margin-top: 20px;
-  }
-
-  .analises h2 {
-    font-size: 30px; 
-  }
-
-  .funcionalidades h2 {
-    font-size: 30px;
-  }
-
-  .grade {
-    grid-template-columns: 1fr; 
-    gap: 20px; 
-  }
-
-  .caixa {
-    width: 100%;
-    height: auto; 
-  }
-
-  .modeloNegocios h2 {
-    font-size: 30px;
+    font-size: 2.5rem;
+    margin-top: 40px;
+    text-align: center;
   }
 }
