--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -612,6 +612,7 @@
 /* responsividade */
 @media (max-width: 1440px) {
   header {
+    width: 50px;
     height: 90px; 
   }
 
@@ -646,7 +647,7 @@
 
   .banner {
     width: 100%;
-    height: 500px;
+    height: 900px;
   }
 
   .imagem-principal {
