--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -620,7 +620,8 @@
     font-size: 12px;
     margin-inline: 30px;
     flex-direction: row;
-    padding: 10px;
+    padding: 20px;
+    margin-inline: 5px;
   }
 
   .logo img {
@@ -637,11 +638,11 @@
   }
 
   .itens-links li {
-    padding-left: 10px;
+    padding-left: 8px;
   }
 
   .btn-assistir {
-    width: 100px;
+    width: 70px;
     height: 40px;
   }
 
