--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -617,10 +617,12 @@
   }
 
   nav {
-    font-size: 12px;
+    display: flex;
+    font-size: 11px;
     margin-inline: 30px;
     flex-direction: row;
     padding: 20px;
+    justify-content: space-between;
     margin-inline: 5px;
   }
 
@@ -629,12 +631,16 @@
   }
 
   .div-links {
-    top: 0;
+    display: flex;
+    justify-content: center; 
+    flex-grow: 1; 
   }
 
   .itens-links {
     flex-direction: row;
     justify-content: center;
+    padding: 0;
+    margin: 0;
   }
 
   .itens-links li {
