--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -618,8 +618,9 @@
 
   nav {
     display: flex;
-    font-size: 11px;
-    margin-inline: 0;
+    font-size: 10px;
+    margin: 0; 
+    padding: 0 15px;
     flex-direction: row;
     padding: 20px;
     justify-content: space-between;
@@ -649,7 +650,8 @@
 
   .btn-assistir {
     width: 70px;
-    height: 40px;
+    height: 20px;
+    font-size: 10px
   }
 
   .banner {
