--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -651,23 +651,8 @@
   .btn-assistir {
     width: 70px;
     height: 30px;
-    font-size: 10px !important;
+    font-size: 10px; /* Remover !important */
     padding: 5px 10px;
-  }
-
-  .banner {
-    width: 100%;
-    height: 900px;
-  }
-
-  .imagem-principal {
-    width: 100%;
-    height: auto;
-  }
-
-  .titulo-banner {
-    font-size: 2.5rem;
-    margin-top: 40px;
-    text-align: center;
+    transition: transform 0.3s ease, font-size 0.3s ease, color 0.3s ease;
   }
 }
