--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -618,17 +618,15 @@
 
   nav {
     display: flex;
-    font-size: 10px;
-    margin: 0; 
-    padding: 0 15px;
+    font-size: 12px;
     flex-direction: row;
     padding: 20px;
     justify-content: space-between;
-    margin-inline: 5px;
+    margin-inline: 80px;
   }
 
   .logo img {
-    width: 30px;
+    width: 50px;
   }
 
   .div-links {
@@ -640,7 +638,7 @@
   .itens-links {
     flex-direction: row;
     justify-content: center;
-    padding: 0;
+    padding: 10px;
     margin: 0;
   }
 
