--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -612,17 +612,19 @@
 /* responsividade */
 @media (max-width: 1440px) {
   header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
     width: auto;
     height: 90px; 
+    padding: 0 20px;
   }
 
   nav {
     display: flex;
     font-size: 12px;
-    flex-direction: row;
-    padding: 20px;
-    justify-content: space-between;
-    margin-inline: 80px;
+    justify-content: center;
   }
 
   .logo img {
@@ -636,15 +638,16 @@
   }
 
   .itens-links {
+    display: flex;
     flex-direction: row;
     justify-content: center;
-    padding: 10px;
+    gap: 20px;
     margin: 0;
   }
 
   .itens-links li {
-    padding-left: 8px;
-    margin-bottom: 10px; 
+    margin: 0;
+    padding: 0;
   }
 
   .btn-assistir {
