--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -612,18 +612,13 @@
 /* responsividade */
 @media (max-width: 1080px) {
   header {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    margin-right: -50px;
     position: fixed;
-    width: auto;
     height: 90px; 
-    padding: 0 20px;
   }
 
   nav {
-    display: flex;
+    flex-direction: column; 
+    margin-inline: 20px;
     font-size: 12px;;
   }
 
@@ -631,23 +626,14 @@
     width: 70px;
   }
 
-  .div-links {
-    display: flex;
-    justify-content: center; 
-    flex-grow: 1; 
-  }
-
   .itens-links {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 20px;
-    margin: 0;
+    flex-direction: column; 
+    padding: 10px 0;
   }
 
   .itens-links li {
-    margin: 0;
-    padding: 0;
+    padding-left: 0;
+    margin-bottom: 10px; 
   }
 
   .btn-assistir {
