--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -117,7 +117,7 @@
     left: 50%; 
     transform: translate(-50%, -50%); 
     z-index: 1; 
-    width: 100%; 
+    width: 850px; 
     height: auto; 
   }
   
