--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -1,47 +1,43 @@
 @media (max-width: 1440px) {
+  header {
+    height: 80px; 
+  }
+
   nav {
-    margin-inline: 20px;
+    font-size: 18px;
+    margin-inline: 50px; 
   }
 
   .logo img {
-    width: 70px;
+    width: 80px; 
   }
 
   .div-links {
-    top: 10px;
+    top: 8px; /* Ajuste da posição */
   }
 
   .itens-links li {
-    padding-left: 15px;
+    padding-left: 20px; /* Ajuste do espaçamento entre os itens */
   }
 
   .btn-assistir {
-    width: 130px;
+    width: 140px; /* Ajuste do tamanho do botão */
+    height: 40px;
+    font-size: 16px; /* Ajuste do tamanho da fonte */
   }
 
   .banner {
-    width: 100%;
-    height: 60vh;
-  }
-
-  .banner::before {
-    background-size: cover;
-    background-position: center center;
+    width: 100%; /* Ajuste do tamanho da banner */
+    height: 500px; /* Ajuste da altura */
   }
 
   .imagem-principal {
-    width: 70%;
+    width: 80%; /* Ajuste da imagem */
     height: auto;
   }
 
   .titulo-banner {
-    font-size: 3rem;
-    padding: 10px;
-  }
-
-
-  .btn-assistir {
-    font-size: 14px; 
-    padding: 0 10px;
+    font-size: 2.5rem; /* Ajuste do tamanho da fonte do título */
+    margin-top: 50px; /* Ajuste da margem */
   }
 }
