--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -9,7 +9,7 @@
   }
 
   .logo img {
-    width: 80px; 
+    width: 60px; 
   }
 
   .div-links {
@@ -21,9 +21,7 @@
   }
 
   .btn-assistir {
-    width: 140px; /* Ajuste do tamanho do botão */
-    height: 40px;
-    font-size: 16px; /* Ajuste do tamanho da fonte */
+    visibility: hidden;
   }
 
   .banner {
