--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -4,12 +4,12 @@
   }
 
   nav {
-    font-size: 18px;
+    font-size: 12px;
     margin-inline: 50px; 
   }
 
   .logo img {
-    width: 60px; 
+    width: 40px; 
   }
 
   .div-links {
@@ -21,7 +21,8 @@
   }
 
   .btn-assistir {
-    visibility: hidden;
+    display: none !important;
+    visibility: hidden !important;
   }
 
   .banner {
