--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -17,7 +17,8 @@
   }
 
   .itens-links li {
-    padding-left: 20px; /* Ajuste do espaçamento entre os itens */
+    padding:  0;
+    margin: 0;
   }
 
   .btn-assistir {
