--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -1,6 +1,8 @@
 @media (max-width: 1440px) {
   header {
     height: 80px; 
+    align-items: center;
+    justify-content: space-between;
   }
 
   nav {
