--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -35,12 +35,75 @@
   }
 
   .imagem-principal {
-    width: 80%; /* Ajuste da imagem */
+    width: 80%; 
     height: auto;
   }
 
   .titulo-banner {
     font-size: 2.5rem; /* Ajuste do tamanho da fonte do título */
-    margin-top: 50px; /* Ajuste da margem */
+    margin-top: 50px; 
+  }
+
+  .solucao {
+    width: 100%;
+    height: 775px; 
+    padding: 20px;
+    text-align: center;
+    background-color: rgb(245, 244, 210);
+    background-image: 
+      radial-gradient(circle, #f1ab28 10%, transparent 10%), 
+      radial-gradient(circle, #f1ab28 10%, transparent 10%);
+    background-size: 2400px 2400px, 1100px 1100px; 
+    background-repeat: no-repeat; 
+    background-position: right -1200px top -1100px, left -550px top -500px;
+    position: relative;
+  }
+
+  .solucao h2 {
+    font-size: 40px;
+    font-weight: 800;
+    color: #696f00;
+    transform: translateY(35px);
+  }
+
+  .retangulos {
+    position: relative;
+    width: 100%;
+    height: 600px;
+    padding: 20px;
+    text-align: center;
+  }
+
+  .retangulo {
+    position: absolute;
+    background: linear-gradient(#5E9849, #5E9849);
+    border-radius: 10px;
+    width: 350px;
+    height: 150px;
+    z-index: 1;
+  }
+
+  .retangulo1 {
+    top: 130px;
+    left: 340px;
+  }
+
+  .retangulo2 {
+    top: 305px;
+    left: 140px;
+  }
+
+  .retangulo3 {
+    top: 480px;
+    left: 290px;
+  }
+
+  .solucao img {
+    position: relative;
+    width: 750px;
+    height: 700px;
+    margin-right: -600px;
+    margin-top: 40px;
+    z-index: 2;
   }
 }
