--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -3,6 +3,7 @@
     height: 80px; 
     align-items: center;
     justify-content: space-between;
+    padding: 0;
   }
 
   nav {
@@ -111,9 +112,9 @@
   .solucao img {
     position: relative;
     width: 550px;
-    height: 500px;
-    margin-right: -600px;
-    margin-top: 40px;
+    height: 450px;
+    margin-right: -400px;
+    margin-top: 90px;
     z-index: 2;
   }
 
