--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -154,8 +154,8 @@
 
   /* Container */
   .solucao {
-      width: 100%;
-      height: 775px; /* Definindo a altura do elemento */
+      width: auto;
+      height: 715px; /* Definindo a altura do elemento */
       padding: 20px;
       text-align: center;
       background-color: rgb(245, 244, 210);
