--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -207,6 +207,22 @@
     left: 290px;
   }  
 
+  .texto {
+    position: absolute;
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    color: white; 
+    text-align: left; 
+    font-size: 16px;
+    white-space: nowrap;
+  }
+
+  .texto1 p, .texto2 p, .texto3 p {
+    margin: 0;
+    padding: 0;
+  }
+
   .solucao img {
     position: relative;
     width: 750px;
@@ -297,16 +313,32 @@
     left: -570px;
   }
 
-  .quadro2 {
+   .quadro2 {
     background-color: #f7b71d;
     top: -10px;
     left: -570px;
   }
   
-  .quadro3 {
+   .quadro3 {
     background-color: #22998b;
     top: 150px;
     left: -570px;
+  }
+
+   .analise {
+    position: absolute;
+    top: 50%; /* Centraliza verticalmente */
+    left: 50%; /* Centraliza horizontalmente */
+    transform: translate(-50%, -50%); /* Ajuste preciso para centralização */
+    color: white; /* Texto branco para contraste */
+    text-align: left; /* Alinha o texto no centro */
+    font-size: 16px;
+    white-space: nowrap;
+  }
+
+  .analise1 p, .analise2 p, .analise3 p {
+    margin: 0;
+    padding: 0;
   }
 
   /* Container */
@@ -607,4 +639,65 @@
     color: #fff;
     font-size: 14px;
     margin: 0;
+  }
+
+  .rodape {
+    background-color: black;
+    color: white;
+    padding: 20px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .rodape p {
+    align-self: flex-start;
+    margin-top: -30px; /* Ajuste para colocar o texto mais perto do topo */
+    font-size: 14px;
+  }
+
+  .infoRodape {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 800px; /* Limita a largura para manter a organização */
+    margin-top: 20px; /* Espaçamento entre o texto e as seções */
+  }
+
+  .secoes {
+    margin-top: 20px;
+  }
+
+  .secoes h4, .contato h4 {
+    margin-bottom: 10px; 
+  }
+
+  .secoes ul, .contato ul {
+    list-style: none;
+    padding: 0;
+    margin-top: 0;
+  }
+
+ .secoes li, .contato li {
+    margin-bottom: 8px;
+  }
+
+ .secoes a, .contato a {
+    color: white;
+    text-decoration: none;
+    font-size: 14px;
+  }
+
+ .secoes a:hover, .contato a:hover {
+    text-decoration: underline;
+  }
+
+ .contato h4 {
+    margin-top: 20px;
+    font-size: 16px;
+  }
+
+.contato ul li a {
+    font-size: 14px;
   }
