--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -113,6 +113,10 @@
     left: 160px;
   }
 
+  .texto {
+    font-size: 12px;
+  }
+
   .solucao img {
     position: relative;
     width: 420px;
@@ -183,6 +187,10 @@
     left: -180px;
   }
 
+  .analise {
+    font-size: 12px;
+  }
+
   .funcionalidades {
     text-align: center;
     padding: 90px; /* Aumentei o padding */
@@ -215,26 +223,26 @@
   .grade {
     display: grid;
     grid-template-columns: repeat(2, 1fr); /* Mantém 2 colunas */
-    gap: 200px;
-    max-width: 1100px; 
+    gap: 120px;
+    max-width: 700px; 
     justify-content: space-between;
     position: relative;
    }
   
   .grade > :nth-child(1),
   .grade > :nth-child(2) {
-    margin-top: 60px; 
+    margin-top: 30px; 
    }
   
   .grade > :nth-child(3),
   .grade > :nth-child(4) {
-    margin-top: -100px; 
+    margin-top: -50px; 
    }
   
   .caixa {
     background: #f9eeb2;
-    width: 300px; 
-    height: 200px;
+    width: 150px; 
+    height: 100px;
     border-radius: 10px;
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
     padding: 25px; /* Maior padding */
@@ -247,11 +255,11 @@
    }
   
   .caixa h2 {
-    font-size: 20px; 
+    font-size: 16px; 
    }
   
   .caixa p {
-    font-size: 16px; 
+    font-size: 14px; 
    }
   
   .imagem_prototipo {
@@ -262,8 +270,56 @@
   
   .imagem_prototipo img {
     max-width: 800px; 
-    width: 40%; 
+    width: 60%; 
    }
+
+  .recysprout {
+        padding: 50px 20px;
+        text-align: center;
+    }
+
+    .conteudoMembros {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        margin-top: 20px;
+    }
+
+    .membro {
+        display: flex;
+        flex-direction: column; /* Coloca a imagem e descrição em coluna */
+        align-items: center;
+        gap: 10px; /* Espaçamento entre a imagem e a descrição */
+        width: 100%;
+        max-width: 250px;
+    }
+
+    .infoMembro {
+        background-color: #088280;
+        padding: 10px;
+        text-align: center;
+        border-radius: 15px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        width: 100%;
+    }
+
+    .infoMembro img {
+        width: 100px;
+        height: 100px;
+        object-fit: cover;
+        border-radius: 50%;
+        margin-bottom: 10px;
+    }
+
+    .descricaoMembro {
+        background-color: #088280;
+        padding: 10px;
+        text-align: center;
+        border-radius: 10px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        width: 100%;
+    }
 }     
 
   
