--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -114,7 +114,7 @@
   }
 
   .texto {
-    font-size: 11px;
+    font-size: 10px;
     font-weight: 800;
   }
 
@@ -122,7 +122,7 @@
     position: relative;
     width: 420px;
     height: 350px;
-    margin-left: -740px;
+    margin-left: -750px;
     margin-top: 310px;
     z-index: 2;
   }
@@ -169,7 +169,7 @@
   }
 
   .quadro1, .quadro2, .quadro3 {
-    width: 230px; 
+    width: 250px; 
     height: 90px; 
   }
 
@@ -247,7 +247,7 @@
     height: 100px;
     border-radius: 10px;
     box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
-    padding: 25px; /* Maior padding */
+    padding: 5px; 
     text-align: left;
    }
   
@@ -257,11 +257,11 @@
    }
   
   .caixa h2 {
-    font-size: 13px; 
+    font-size: 5px; 
    }
   
   .caixa p {
-    font-size: 11px; 
+    font-size: 5px; 
    }
   
   .imagem_prototipo {
@@ -275,9 +275,23 @@
     width: 60%; 
    }
 
+  .modeloNegocios {
+    position: relative;
+    padding: 50px 20px;
+    text-align: center;
+    overflow: hidden;
+    width: 100%; 
+    max-width: 1200px;
+    margin: 0 auto; 
+}
+
+  .planos {
+    gap: 10px;
+  }
+  
   .plano {
-    width: 125px;
-    height: 225px;
+    width: 150px;
+    height: 275px;
   }
   
   .preco {
@@ -288,7 +302,6 @@
     font-size: 13px;
   }
 
-  .
 
   .recysprout {
     padding: 50px 20px;
