--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -282,17 +282,26 @@
     overflow: hidden;
     width: 100%; 
     max-width: 1200px;
-    height: auto;
+    height: 700px;
     margin: 0 auto; 
 }
 
   .planos {
-    gap: 15px;
+    gap: 8px;
   }
-  
+
+  .nomePlano {
+    font-size: 16px;
+  }
+
   .plano {
-    width: 100px;
-    height: 300px;
+    width: 120px;
+    height: 330px;
+    padding: 5px;
+  }
+
+  .plano h5 {
+  font-size: 10px;
   }
   
   .preco {
